clang/test/BSC/Negative/Ownership/Owned/init_list/init_list.cbs
// RUN: %clang_cc1 -verify %s

void exhaust<T>(T *_Owned);

typedef struct {
    int *_Owned p;
} Wrapper;

typedef struct {
    Wrapper *_Owned w;
} Nested;

typedef struct {
    int tag;
    int *_Owned head;
    int *_Owned backup;
    Nested *_Owned next;
    int payload[2];
} MultiOwnedWithData;

typedef struct {
    Wrapper inner;
    int *_Owned leaf;
    int state;
} OwnedAggregate;

typedef struct {
    MultiOwnedWithData node;
    OwnedAggregate *_Owned ext;
    int version;
} DeepOwnedBundle;

typedef struct {
    int id;
    Wrapper left;
    Wrapper right;
    int *_Owned tail;
} PairAndTail;

typedef struct {
    PairAndTail *_Owned pair;
    Wrapper slot;
    int *_Owned alt;
    int flags;
} IndirectContainer;

int *_Owned fundamental(int *_Owned p) {
    Wrapper w = {.p = p};
    exhaust(w.p);
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned move_into_nested_member(int *_Owned p) {
    OwnedAggregate a = {.inner = {.p = p}, .leaf = nullptr, .state = 7};
    exhaust(a.inner.p);
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned move_into_multi_owned_with_data(int *_Owned p, int *_Owned q) {
    MultiOwnedWithData m = {
        .tag = 11,
        .head = p,
        .backup = q,
        .next = nullptr,
        .payload = {1, 2}
    };
    exhaust(m.head);
    exhaust(m.backup);
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned move_into_owned_aggregate_leaf(int *_Owned p) {
    OwnedAggregate a = {
        .inner = {.p = nullptr},
        .leaf = p,
        .state = 3
    };
    exhaust(a.leaf);
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned move_into_deep_owned_bundle(int *_Owned p, int *_Owned q) {
    DeepOwnedBundle b = {
        .node = {
            .tag = 9,
            .head = p,
            .backup = q,
            .next = nullptr,
            .payload = {0, 1}
        },
        .ext = nullptr,
        .version = 2
    };
    exhaust(b.node.head);
    exhaust(b.node.backup);
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned move_into_pair_and_tail(int *_Owned p, int *_Owned q) {
    PairAndTail t = {
        .id = 5,
        .left = {.p = p},
        .right = {.p = q},
        .tail = nullptr
    };
    exhaust(t.left.p);
    exhaust(t.right.p);
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned move_into_indirect_container_slot(int *_Owned p, int *_Owned q) {
    IndirectContainer c = {
        .pair = nullptr,
        .slot = {.p = p},
        .alt = q,
        .flags = 13
    };
    exhaust(c.slot.p);
    exhaust(c.alt);
    return p; // expected-error {{use of moved value: `p`}}
}